# TensorAeroSpace

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CI_CD_SETUP_COMPLETE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.ru-ru.md  Untitled1.ipynb  example_benchmark_usage.py  pyproject.toml  readme.md  req.txt  requirements.txt  setup.py  start.sh  test_f16_validation.py  test_ihdp_fixed.py  test_ihdp_notebook_fixed.py  test_quickstart.py
.github/: CI_CD.md  CODEOWNERS  WORKFLOW_CHANGES.md  actions-readme.md  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: action.yml  ci.yml  docstr.yml  github-actions-demo.yml  publish.yml  quick-check.yml  release.yml  tests.yml
docs/: 2  conf.py  index.rst  make.bat
docs/agent/: a2c_narx.rst  a3c.rst  ddpg.rst  dqn.rst  gail.rst  ihdp.rst  mpc.rst  ppo.rst  sac.rst
docs/benchmark/: bench.rst  metrics.rst
docs/guide/: installation.rst  unity_env.rst
docs/lesson/: 0intro.rst  1analysis_airfoil.rst  2analysis_plane_aero.rst  3analysis_plane_static.rst  4matlabscript.rst  5simulinkmodel.rst  6dllgen.rst
docs/model/: EVL.rst  b747.rst  comsat.rst  f16.rst  f4c.rst  geosat.rst  lsu.rst  suav.rst  typical_rocket.rst  uav.rst  unity_env.rst  x15.rst
docs/optimization/: optuna_based.rst
docs/signals/: optuna_based.rst  signals.rst
docs/theory/: cpp_gen.rst  quality_indicators.rst  sim_pyth.rst  simulink.rst
docs/unity/: unity_env.rst
example/: README.md  a3c-classic.ipynb  classic_example.ipynb  example-a3c.ipynb  example-env-LinearLongitudinalB747.ipynb  example-env-LinearLongitudinalELVRocket.ipynb  example-env-LinearLongitudinalF16.ipynb  example-env-LinearLongitudinalMissileModel.ipynb  example-env-LinearLongitudinalUAV.ipynb  example-env-comsat.ipynb  example-env-f4c.ipynb  example-env-geosat.ipynb  example-env-uav-statespace.ipynb  example-env-unity.ipynb  example-env-x15.ipynb  example-ihdp-failure.ipynb  example-mpc-state-space-transformers.ipynb  example-narx.ipynb  example-sac-f16.ipynb  example-sac.ipynb  example.ipynb  example.py  example_a2c.ipynb  example_benchmark_usage.py  example_ddpg.ipynb  example_dqn.ipynb  example_explarotaion.ipynb  example_f16_with_validation.py  example_gail.ipynb  example_ihdp.ipynb  example_mpc.ipynb  example_mpc_optimization.ipynb  example_ppo.ipynb  example_ppo_torch.ipynb  example_sim_model_to_python.ipynb  example_sim_pyth.ipynb  example_unity.ipynb  example_your_sim.ipynb  hyperparam_optimization.ipynb  mcp_pendeluim.ipynb  (+6 more)
example/environments/: example-env-LinearLongitudinalB747.ipynb  example-env-LinearLongitudinalELVRocket.ipynb  example-env-LinearLongitudinalF16.ipynb  example-env-LinearLongitudinalMissileModel.ipynb  example-env-LinearLongitudinalUAV.ipynb  example-env-comsat.ipynb  example-env-f4c.ipynb  example-env-geosat.ipynb  example-env-unity.ipynb  example-env-x15.ipynb
example/general_examples/: classic_example.ipynb  example.py  example_ihdp.ipynb  example_ihdp_beautiful.ipynb
example/mpc_controllers/: example-mpc-state-space-transformers.ipynb  example-mpc-state-space.ipynb  example_mpc_stochastic.ipynb
example/optimization/: example_optimization.ipynb
example/pid_controllers/: pid_optimization.ipynb  pid_twiddle.ipynb  pid_use.ipynb  tune_pid copy.ipynb  tune_pid.ipynb
example/reinforcement_learning/: create_dataset_for_gail.ipynb  example-a3c.ipynb  example-sac-f16.ipynb  torch_dqn.ipynb
example/utilities/: example_explarotaion.ipynb  example_sim_model_to_python.ipynb  hyperparam_optimization.ipynb  signals.ipynb
tensoraerospace/: __init__.py  utils.py
tensoraerospace/aerospacemodel/: __init__.py  b747.py  base.py  comsat.py  elv.py  f4c.py  geosat.py  lapan.py  rocket.py  uav.py  ultrastick.py  x15.py
tensoraerospace/agent/: __init__.py  base.py  pid.py
tensoraerospace/benchmark/: README.md  __init__.py  bench.py  example_benchmark_usage.py  function.py
tensoraerospace/envs/: __init__.py  b747.py  comsat.py  elv.py  f4c.py  geostat.py  lapan.py  rocket.py  uav.py  ultrastick.py  unity_env.py  utils.py  x15.py
tensoraerospace/optimization/: __init__.py  base.py  ray.py
tensoraerospace/signals/: __init__.py  random.py  standart.py
tensorairspace/: __init__.py  utils.py
tensorairspace/aerospacemodel/: b747.py  base.py  comsat.py  elv.py  f4c.py  geosat.py  rocket.py  uav.py  x15.py
tensorairspace/agent/: __init__.py
tensorairspace/aircraftmodel/: __init__.py  b747.py  base.py  elv.py  rocket.py
tensorairspace/benchmark/: bench.py  function.py
tensorairspace/envs/: __init__.py  b747.py  comsat.py  elv.py  f16.py  f4c.py  geostat.py  rocket.py  uav.py  unity_env.py  x15.py
tensorairspace/optimization/: __init__.py  base.py  ray.py
tensorairspace/signals/: __init__.py  random.py  standart.py
tests/: test_env_sac.py
tests/aerospacemodel/: b747_model_test.py  base_model_test.py  comsat_model_test.py  elv_model_test.py  f16_linear_angular_getters_test.py  f16_linear_angular_initial_test.py  f16_linear_angular_model_import_test.py  f4c_model_test.py  f4c_plot_deg_test.py  geosat_model_test.py  lapan_model_test.py  rocket_model_test.py  supersonic_directional_model_test.py  supersonic_longitudinal_model_test.py  uav_model_test.py  ultrastick_model_test.py  x15_model_test.py
tests/agents/: a2c_model_test.py  a2c_save_load_test.py  a2c_test.py  a3c_agent_smoke_test.py  a3c_smoke_test.py  dqn_buffer_test.py  (+20 more)
(+563 files in other folders)
