[tool.poetry]
name = "tensoraerospace"
version = "0.1.0"
description = ""
authors = ["Artemiy Mazaew (mrbyte)"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ray = {extras = ["tune"], version = "^2.8.0"}
optuna = "^3.4.0"
matplotlib = "^3.8.1"
pandas = "^2.1.3"
scipy = "^1.11.3"
torch = "^2.1.0"
tensorflow = "^2.14.0"
tensorflow-macos = "^2.15.0"
moviepy = "^1.0.3"
gymnasium = "^0.29.1"
jupyterlab = "^4.1.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
m2r = "^0.3.1"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.3"
ruff = "^0.1.5"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
