[tool.poetry]
name = "tensoraerospace"
version = "0.3.0"
description = "Open source deep learning framework that focuses on aerospace objects (rockets, planes, UAVs)"
authors = ["Artemiy Mazaew (mr8bit)", "Vasily Davydov (dexfrost89)", "Yakov Li (yakovglee)"]
license = "MIT"
packages = [
    { include = "tensoraerospace" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ray = {extras = ["tune"], version = "^2.8.0"}
optuna = "^3.4.0"
matplotlib = "^3.8.1"
pandas = "^2.1.3"
scipy = "^1.11.3"
tensorflow = "^2.14.0"
moviepy = "^1.0.3"
gymnasium = "^0.29.1"
torch = "^2.2.0"
huggingface-hub = "^0.22.2"
tensorflow-macos = { version = "2.15.0", markers = "sys_platform == 'darwin'" }

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
m2r = "^0.3.1"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.3"
ruff = "^0.1.5"
ipykernel = "^6.26.0"
docstr-coverage = "^2.3.1"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"



[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
